--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-seaborn==0.11.2
-pandas==1.3.5
 streamlit==1.3.1
+regex==2021.11.10
+numpy==1.21.4
+pandas==1.3.5
 matplotlib==3.5.1
+seaborn==0.11.2
+wordcloud==1.8.1
